Fix spacing on filters and improve readme

--- a/styles/imdone-atom.less
+++ b/styles/imdone-atom.less
@@ -501,6 +501,12 @@
               max-width: 320px;
             }
           }
+          .task-filters {
+            margin: 1em 0;
+          }
+          .task-source {
+            margin: 1em 0 0 0;
+          }
           .task-order {
             position: absolute;
             top: 2px;
